Only show first table column on mobile to fix issue with Partners page

--- a/docs/src/.vuepress/styles/index.styl
+++ b/docs/src/.vuepress/styles/index.styl
@@ -29,3 +29,8 @@ h5
 @media (max-width: $MQMobileNarrow)
   {$contentClass}
     word-break break-word
+
+    table
+      td, th
+        &:not(:first-child)
+          display: none
